--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -57,7 +57,7 @@
     <string name="preference_ad_disabled_succesfully">Реклама отключена</string>
     <string name="preference_date_1">Дата рождения</string>
     <string name="preference_date_2">Введите когда вы родились</string>
-    <string name="preference_zodiac_signs_2">Выберета ваш знак зодиака</string>
+    <string name="preference_zodiac_signs_2">Выберите ваш знак зодиака</string>
     <string name="preference_zodiac_signs_1">Знак зодиака</string>
     <string name="preference_locale_1">Язык</string>
     <string name="preference_locale_2">Русский</string>
