reorg spons dialog

--- a/res/values-de/h_strings.xml
+++ b/res/values-de/h_strings.xml
@@ -103,6 +103,7 @@
     <string name="review">Bewertung auf Google Play</string>
     <string name="review_summary">Sie werden einen unschätzbaren Beitrag zur Entwicklung des Projekts zu machen!</string>
     <string name="ok">Ok</string>
+    <string name="later">später erinnern</string>
     <string name="cancel">Cancel</string>
     
     <string name="title_dialog_ad">Anzeigen entfernen</string>
