--- a/res/layout/dialog_content_sponsor.xml
+++ b/res/layout/dialog_content_sponsor.xml
@@ -96,7 +96,7 @@
             android:layout_alignParentTop="true"
             android:background="@drawable/ic_dialog_btn"
             android:padding="5dp"
-            android:text="@string/ok"
+            android:text="@string/later"
             android:textColor="@color/intro_main_text"
             android:textSize="16sp" />
 
@@ -108,9 +108,10 @@
             android:layout_toLeftOf="@+id/apply"
             android:background="@drawable/ic_dialog_btn"
             android:padding="5dp"
-            android:text="@string/cancel"
+            android:text="@string/no_thanks"
             android:textColor="@color/intro_main_text"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
+
     </RelativeLayout>
 
 </LinearLayout>
