--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -103,6 +103,7 @@
     <string name="review">Оцени на Гугл Плей!</string>
     <string name="review_summary">Ты сделаешь неоценимый вклад в развитие проекта!</string>
     <string name="ok">Хорошо</string>
+    <string name="later">Напомнить позже</string>
     <string name="cancel">Отмена</string>
     
     <string name="title_dialog_ad">Удалить рекламу</string>
