add new share link

--- a/res/values-es/h_strings.xml
+++ b/res/values-es/h_strings.xml
@@ -67,7 +67,7 @@
     <string name="share">Cuota</string>
     <string name="share_content_horo_for">Horóscopo</string>
     <string name="share_content_horo_for_2">para el signo del zodiaco:</string>
-    <string name="share_content_url">https://play.google.com/store/apps/details?id=com.BBsRs.horoscopeNewEdition</string>
+    <string name="share_content_url">http://brothers-rovers.ru/horoscope_es.html</string>
     <string name="share_personal_1">horóscopo</string>
     <string name="share_money_1">dinero</string>
     <string name="share_send_from">Enviado desde el Horóscopo aplicación</string>
