--- a/res/layout/introduce_new_theme_third.xml
+++ b/res/layout/introduce_new_theme_third.xml
@@ -11,13 +11,26 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/intro_main_text"
         android:textSize="30sp" />
+    
+    <TextView
+        android:id="@+id/notMy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-3dp"
+        android:text="@string/introduce_notMy"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/intro_main_text"
+        android:textSize="11sp" />
 
     <TextView
         android:id="@+id/subTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/notMy"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/intro_second_text"
         android:textSize="11sp" />
