--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -80,6 +80,7 @@
     <string name="introduce_back">НАЗАД</string>
     <string name="introduce_exit">ВЫХОД</string>
     <string name="introduce_start">Начать</string>
+    <string name="introduce_notMy">Это не ваш знак зодиака?</string>
     <string name="introduce_date">Выбрать</string>
     <string name="introduce_date_check">Проверьте правильность введенных данных</string>
     <string name="introduce_slogan">Ваш личный ежедневный помощник</string>
