add new items to sponsor's dialog

--- a/res/layout/dialog_content_sponsor.xml
+++ b/res/layout/dialog_content_sponsor.xml
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/icon"
-            android:text="@string/title_dialog"
             android:singleLine="true"
+            android:text="@string/title_dialog"
             android:textColor="@color/intro_main_text"
             android:textSize="18sp" />
     </RelativeLayout>
@@ -82,6 +82,103 @@
                 android:scaleType="center"
                 android:src="@drawable/logo_google_play" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/make_share"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/ic_dialog_btn" >
+
+            <TextView
+                android:id="@+id/TextView15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/TextView16"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_horizontal_margin"
+                android:text="@string/dialog_sponsor_share"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/intro_main_text"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/TextView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/TextView15"
+                android:layout_alignRight="@+id/TextView15"
+                android:layout_below="@+id/TextView15"
+                android:paddingBottom="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:text="@string/dialog_sponsor_share_sumarry"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/intro_second_text"
+                android:textColorHint="@color/slider_menu_custom_text_color"
+                android:textColorLink="@color/slider_menu_custom_text_color"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/TextView16"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignBottom="@+id/TextView14"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:scaleType="center"
+                android:src="@drawable/ic_share" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/make_vk"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/ic_dialog_btn" >
+
+            <TextView
+                android:id="@+id/TextView25"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/TextView26"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_horizontal_margin"
+                android:text="@string/dialog_sponsor_vk"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/intro_main_text"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/TextView24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/TextView25"
+                android:layout_alignRight="@+id/TextView25"
+                android:layout_below="@+id/TextView25"
+                android:paddingBottom="@dimen/activity_horizontal_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:text="@string/dialog_sponsor_vk_sumarry"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/intro_second_text"
+                android:textColorHint="@color/slider_menu_custom_text_color"
+                android:textColorLink="@color/slider_menu_custom_text_color"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:id="@+id/TextView26"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignBottom="@+id/TextView24"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:gravity="center"
+                android:scaleType="center"
+                android:src="@drawable/ic_vk" />
+        </RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
@@ -111,7 +208,6 @@
             android:text="@string/no_thanks"
             android:textColor="@color/intro_main_text"
             android:textSize="16sp" />
-
     </RelativeLayout>
 
 </LinearLayout>
