--- a/res/values-de/h_strings.xml
+++ b/res/values-de/h_strings.xml
@@ -107,6 +107,13 @@
     <string name="later">später erinnern</string>
     <string name="cancel">Cancel</string>
     
+    <string name="dialog_sponsor_share">Diese App teilen</string>
+    <string name="dialog_sponsor_share_sumarry">Teilen Sie ihren Freunden und Verwandten mit, wie Ihnen diese App hilft.</string>
+    <string name="share_text">Ich lese das Horoskop nur in dieser Anwendung.</string>
+    <string name="dialog_sponsor_vk">Besuchen Sie unsere Seite VK</string>
+    <string name="dialog_sponsor_vk_sumarry">Folgen Sie unseren vk Seite zu halten über die neuesten Nachrichten oder Fragen.</string>
+    <string name="dialog_sponsor_vk_link">https://vk.com/brothersrovers</string>
+    
     <string name="title_dialog_ad">Anzeigen entfernen</string>
     <string name="summary_dialog_ad">Entfernen Sie alle Arten von Werbung für 0,99 $.\nDenken Sie daran, dass der Kauf einer, wird Werbung immer beseitigt.</string>
     <string name="i_want_to_buy">ich möchte kaufen</string>
