--- a/res/values-es/h_strings.xml
+++ b/res/values-es/h_strings.xml
@@ -107,6 +107,13 @@
     <string name="later">Recuérdame más tarde</string>
     <string name="cancel">Cancelar</string>
     
+    <string name="dialog_sponsor_share">Comparte esta aplicación</string>
+    <string name="dialog_sponsor_share_sumarry">Usted puede decirle a sus amigos y familiares cómo esta aplicación se está ayudando.</string>
+    <string name="share_text">Leo el horóscopo sólo en esta aplicación.</string>
+    <string name="dialog_sponsor_vk">Visita nuestra página VK</string>
+    <string name="dialog_sponsor_vk_sumarry">Sigue nuestra página de VK para mantenerse al tanto de las últimas noticias o hacer preguntas.</string>
+    <string name="dialog_sponsor_vk_link">https://vk.com/brothersrovers</string>
+    
     <string name="title_dialog_ad">Eliminar publicidad</string>
     <string name="summary_dialog_ad">Retire todo tipo de publicidad de $ 0.99.\nTenga en cuenta que la compra de uno, la publicidad se retira para siempre</string>
     <string name="i_want_to_buy">Quiero comprar</string>
