--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -129,38 +129,26 @@
     
     <string name="wait">Пожалуйста, подождите</string>
     <string name="order_personal_horoscope_info_9">Теперь можно заказать гороскоп!</string>
-    <string name="order_personal_horoscope_info">Если вы хотите получить качественный индивидуальный гороскоп, составленный профессиональным астрологом лично для вас, посетите раздел "Заказать гороскоп"</string>
+    <string name="order_personal_horoscope_info">Если вы хотите получить качественный индивидуальный гороскоп, составленный лично для вас, посетите раздел "Заказать гороскоп"</string>
     <string name="order_personal_horoscope_info_2">Пожалуйста, указывайте максимально точную информацию.</string>
     <string name="order_personal_horoscope_info_3">Пожалуйста, проверьте правильность заполненных данных.</string>
     <string name="order_personal_horoscope_info_8">Спасибо, за заказ!</string>
-    <string name="order_personal_horoscope_info_4">Запрос успешно отправлен, для подтверждения заказа, с вами, по указанным контактным данным, в ближайшее время свяжется наш менеджер с телефона +1(1) 111111111.</string>
+    <string name="order_personal_horoscope_info_4">Запрос успешно отправлен, ссылку на гороскоп вы получите в приложении, а так-же на указанную электронную почту.</string>
     <string name="order_personal_horoscope_info_5">Ошибка. Повторите запрос позже.</string>
     <string name="order_personal_horoscope_info_6">Я понимаю, что это <u>платная</u> услуга.</string>
     <string name="order_personal_horoscope_info_7">Вы не можете посылать больше, чем 1 запрос в минуту.</string>
-    <string name="order_personal_horoscope_type">Какой гороскоп?</string>
-    <string name="order_personal_horoscope_type_1">Индивидуальный</string>
-    <string name="order_personal_horoscope_type_2">Совместимости</string>
-    <string name="order_personal_horoscope_type_3">Прогнозы</string>
-    <string name="order_personal_horoscope_type_4">Детский</string>
-    <string name="order_personal_horoscope_type_5">Профориентация</string>
+    <string name="order_personal_horoscope_type_1">Натальный (штамп)</string> 
     <string name="order_personal_horoscope_order">Заказать</string>
      
     <string name="order_personal_horoscope_name">Как вас зовут?</string>
-    <string name="order_personal_horoscope_name_partner">Как зовут вашего партнера?</string>
-    <string name="order_personal_horoscope_name_child">Как зовут ребенка?</string>
     <string name="order_personal_horoscope_name_sumarry">Иванов Иван Иванович</string>
     <string name="order_personal_horoscope_birthday_date">Когда вы родились?</string>
-    <string name="order_personal_horoscope_birthday_date_child">Когда он родился?</string>
     <string name="order_personal_horoscope_birthday_date_sumarry">31.12.1991</string>
     <string name="order_personal_horoscope_birthday_time">Во сколько вы родились?</string>
-    <string name="order_personal_horoscope_birthday_time_child">Во сколько он родился?</string>
     <string name="order_personal_horoscope_birthday_time_sumarry">23:60</string>
     <string name="order_personal_horoscope_birthday_place">Где вы родились?</string>
-    <string name="order_personal_horoscope_birthday_place_child">Где он родился?</string>
     <string name="order_personal_horoscope_birthday_place_sumarry">Россия, Москва</string>
     <string name="order_personal_horoscope_email">Адрес электронной почты</string>
     <string name="order_personal_horoscope_email_sumarry">admin@brothers-rovers.ru</string>
-    <string name="order_personal_horoscope_tel_skype">Телефон или скайп</string>
-    <string name="order_personal_horoscope_tel_skype_sumarry">788888888888, skypename</string>
     
 </resources>
