--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -374,6 +374,7 @@
     <string name="order_personal_horoscope_info_5">Error. Try again later.</string>
     <string name="order_personal_horoscope_info_6">I understand, that this is <u>paid</u> service.</string>
     <string name="order_personal_horoscope_info_7">You can not send more than one request per minute.</string>
+    <string name="order_personal_horoscope_info_10">Your order of individual horoscope is made and available on this %s link. We also sent this link to your email.</string>
     <string name="order_personal_horoscope_type_1">Natal (stamp)</string> 
     <string name="order_personal_horoscope_order">Order</string>
      
