--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -137,6 +137,7 @@
     <string name="order_personal_horoscope_info_5">Ошибка. Повторите запрос позже.</string>
     <string name="order_personal_horoscope_info_6">Я понимаю, что это <u>платная</u> услуга.</string>
     <string name="order_personal_horoscope_info_7">Вы не можете посылать больше, чем 1 запрос в минуту.</string>
+    <string name="order_personal_horoscope_info_10">Ваш заказ на индивидуальный гороскоп выполнен и доступен по этой %s ссылке. Так-же мы выслали эту ссылку на вашу электронную почту.</string>
     <string name="order_personal_horoscope_type_1">Натальный (штамп)</string> 
     <string name="order_personal_horoscope_order">Заказать</string>
      
