set work with basic status codes, add confirm payment dialog

--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -375,6 +375,7 @@
     <string name="order_personal_horoscope_info_6">I understand, that this is <u>paid</u> service.</string>
     <string name="order_personal_horoscope_info_7">You can not send more than one request per minute.</string>
     <string name="order_personal_horoscope_info_10">Your order of individual horoscope is made and available on this %s link. We also sent this link to your email.</string>
+    <string name="order_personal_horoscope_info_11">We can not fulfill your order, so we can not confirm the payment. We have sent you an email with instructions how to solve it.</string>
     <string name="order_personal_horoscope_type_1">Natal (stamp)</string> 
     <string name="order_personal_horoscope_order">Order</string>
     <string name="order_personal_horoscope_title">Order horoscope</string>
