add try button on new feature dialog

--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -104,6 +104,7 @@
     <string name="review">Оцени на Гугл Плей!</string>
     <string name="review_summary">Ты сделаешь неоценимый вклад в развитие проекта!</string>
     <string name="ok">Хорошо</string>
+    <string name="roulette">Попробовать</string>
     <string name="later">Напомнить позже</string>
     <string name="cancel">Отмена</string>
     
