--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -342,6 +342,7 @@
     <string name="review">Review on GPlay!</string>
     <string name="review_summary">You will make an invaluable contribution to the development of the project!</string>
     <string name="ok">Ok</string>
+    <string name="roulette">Try</string>
     <string name="later">Remind me later</string>
     <string name="cancel">Cancel</string>
     
