--- a/res/layout/action_bar.xml
+++ b/res/layout/action_bar.xml
@@ -29,12 +29,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="-7dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
             android:singleLine="true"
             android:textColor="@color/intro_main_text"
-            android:textSize="11sp" />
+            android:textSize="13sp" />
 
     </LinearLayout>
 
